fixed language icon alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -10150,6 +10150,6 @@ section.resume-section .resume-section-content {
 
 .language-icon {
   position: relative;
-  top: -150px;
+  top: -50px;
   left: 0px;
 }
